Revision history for Async::IPC

          - Added missing Loop::watching_* methods
          - Function tests pass
          - Routine now uses Channel and Process
          - Added Handle, Stream, and Channel
          - Added File watcher
          - Added loop once and idle watcher
          - Passing tests
          - Must be sysread not read on Functions::read_exactly
          - Added tests
          - Added POD
          - Setting programe name uses relative path
          - Refactored Function log messages
          - Dropped file and loop from builder handles in Base
          - Imported code from App::MCP

0.1.1     2014-10-16 12:59:44
          - Added project files to master branch
