@@ -61,8 +61,8 @@ my $_build_async_recv_handler = sub {
 my $_build_call_chs = sub {
    my $self = shift; my %args = (); my $channels = []; my $ch_no = 0;
 
-   $args{read_mode} = (defined $self->on_recv->[ 1 ]) ? 'async' : 'sync';
-# TODO:  $args{write_mode} = 'async';
+   $args{read_mode } = (defined $self->on_recv->[ 1 ]) ? 'async' : 'sync';
+   $args{write_mode} = 'async';
 
    while (defined (my $code = $self->on_recv->[ $ch_no ])) {
       if ($args{read_mode} eq 'async') {
