@@ -1,5 +1,6 @@
 Revision history for Async::IPC
 
+          - Routine call channel now async
           - Added missing Loop::watching_* methods
           - Function tests pass
           - Routine now uses Channel and Process
